# YukiG

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: check_apptype.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_collection_default_strategy.sql  003_item_notes.sql  004_rebuild_fts.sql  005_fix_fts.sql  006_tag_groups.sql  007_item_parent.sql  008_item_category.sql  009_item_favorite.sql  010_steam_games.sql  011_play_sessions.sql  012_game_status.sql  013_nullable_collection.sql  014_steam_system_collection.sql  015_collections_to_grouping_tags.sql  016_demote_steam_collection_groupings.sql  017_remove_grouping_tags.sql  018_steam_collection_tag_type.sql  019_fix_steam_collection_color.sql
src-tauri/src/: errors.rs  lib.rs  main.rs  tray.rs
src-tauri/src/commands/: collection_commands.rs  folder_commands.rs  game_status_commands.rs  game_suggest_commands.rs  icon_commands.rs  item_commands.rs  mod.rs  play_session_commands.rs  preview_commands.rs  search_commands.rs  settings_commands.rs  steam_commands.rs  strategy_commands.rs  tag_commands.rs  thumbnail_commands.rs  tray_commands.rs  watcher_commands.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/db/queries/: collection_queries.rs  item_queries.rs  mod.rs  (+6 more)
src-tauri/src/services/: config.rs  file_drop.rs  file_watcher.rs  fs_browse.rs  image_thumb.rs  launcher.rs  mod.rs  preview.rs  process_tracker.rs  session_registry.rs  steam.rs  steam_running.rs  thumbnail.rs
src-tauri/src/strategies/: default_strategy.rs  game_strategy.rs  mod.rs  steam_strategy.rs
(+308 files in other folders)
