[package]
name = "yukig"
version = "0.1.0"
description = "YukiG — Game Library Manager"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yukig_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
notify = { version = "7", features = ["macos_kqueue"] }
base64 = "0.22"
miniz_oxide = "0.8"
libloading = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows-core = "0.61"
windows = { version = "0.61", features = [
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }

[package.metadata.tauri]
desktop-target = "x86_64-pc-windows-msvc"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
